larissa: inserted wallpaper without watermark

--- a/webpage_design.css
+++ b/webpage_design.css
@@ -24,7 +24,7 @@ body {
 }
 
 .bg-image {
-    background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20230722/pngtree-world-s-primary-currency-exchange-in-3d-render-on-black-background-image_3770009.jpg');
+    background-image: url('https://wise.com/imaginary-v2/money-banks-poland-zloty-money.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
