--- a/webpage_design.css
+++ b/webpage_design.css
@@ -174,6 +174,6 @@ button[type="submit"]:hover {
 }
 
 label[for="amount"],label[for="from"], label[for="to"] {
-    color: white;
+    color: rgb(0, 0, 0);
     font-weight: bold;
 }
