--- a/webpage_design.css
+++ b/webpage_design.css
@@ -22,14 +22,9 @@ body {
     border: 2px solid black;
     text-align: center;
     width: 480px;
-    height: -10%;
-    right: -480px;
-    top: 100px;
     float: center;
-    margin-right: 10px;
     padding: 30px;
-    margin: 20px;
-    position: relative;
+    margin: 100px auto auto auto;
     font-size: 20px;
     display: none;
 }
