added css containers for chart divs (empty)

--- a/public/webpage_design.css
+++ b/public/webpage_design.css
@@ -185,3 +185,15 @@ label[for="amount"],label[for="from"], label[for="to"] {
     color: rgb(0, 0, 0);
     font-weight: bold;
 }
+
+#chartDiv {
+
+}
+
+#toChart,  #fromChart {
+
+}
+
+canvas {
+    
+}
