--- a/public/webpage_design.css
+++ b/public/webpage_design.css
@@ -287,11 +287,11 @@ label[for="amount"],label[for="from"], label[for="to"] {
     }
   }
   /* Ripple Loader Effect */
-.loader-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px; /* Adjust margin as needed */
+  .loader-container {
+    position: absolute;
+    bottom: -50px; /* Adjust the distance from the bottom */
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 span {
