--- a/public/webpage_design.css
+++ b/public/webpage_design.css
@@ -199,10 +199,13 @@ label[for="amount"],label[for="from"], label[for="to"] {
 #toChart,  #fromChart {
     width: 100%;
     max-width: 600px;
-    margin: 20px;
+    margin: 40px;
 }
 
-
+canvas {
+  width: 100%;
+  height: auto
+}
 
 
 
