removed link underline navbar

--- a/public/webpage_design.css
+++ b/public/webpage_design.css
@@ -75,6 +75,10 @@ body {
     position: relative;
 }
 
+#main-nav li a {
+  text-decoration: none;
+}
+
 #main-nav li:hover {
     background-color: mediumaquamarine;
     color: linen;
